<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_profile"
        tools:context=".ProfileActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="200dp" app:srcCompat="@drawable/pic"
            android:id="@+id/profile_image" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/learner_pic"/>
    <TextView
            android:text="@string/learner_name"
            android:layout_width="140dp"
            android:layout_height="38dp" android:id="@+id/learner_name_text"
            app:layout_constraintTop_toBottomOf="@+id/profile_image"
            android:layout_marginTop="32dp" app:layout_constraintEnd_toEndOf="@+id/profile_image"
            app:layout_constraintStart_toStartOf="@+id/profile_image" android:textSize="18sp" android:textStyle="bold"
            android:fontFamily="serif"/>
    <View
            android:id="@+id/horizontal_line"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="#232323"
            app:layout_constraintTop_toBottomOf="@+id/learner_name_text" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/track"
            android:layout_width="0dp"
            android:layout_height="38dp" android:id="@+id/track_text"
            app:layout_constraintEnd_toEndOf="@+id/profile_image"
            app:layout_constraintStart_toStartOf="@+id/profile_image" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/learner_name_text" android:textSize="14sp"
            android:fontFamily="serif" android:typeface="normal" android:lineSpacingExtra="8sp"
            android:textAlignment="viewStart"/>
    <TextView
            android:text="@string/country"
            android:layout_width="0dp"
            android:layout_height="38dp" android:id="@+id/country_text"
            app:layout_constraintEnd_toEndOf="@+id/profile_image"
            app:layout_constraintStart_toStartOf="@+id/profile_image"
            app:layout_constraintTop_toBottomOf="@+id/track_text" android:textSize="14sp"
            android:fontFamily="serif" android:typeface="normal" android:lineSpacingExtra="8sp"
            android:textAlignment="viewStart"/>
    <TextView
            android:text="@string/email"
            android:layout_width="0dp"
            android:layout_height="38dp" android:id="@+id/email_text"
            app:layout_constraintTop_toBottomOf="@+id/country_text"
            app:layout_constraintEnd_toEndOf="@+id/profile_image"
            app:layout_constraintStart_toStartOf="@+id/profile_image" android:textSize="14sp"
            android:fontFamily="serif" android:typeface="normal" android:lineSpacingExtra="8sp"
            android:textAlignment="viewStart"/>
    <TextView
            android:text="@string/phone_number"
            android:layout_width="0dp"
            android:layout_height="38dp" android:id="@+id/phone_number_text"
            app:layout_constraintTop_toBottomOf="@+id/email_text"
            app:layout_constraintEnd_toEndOf="@+id/profile_image"
            app:layout_constraintStart_toStartOf="@+id/profile_image" android:textSize="14sp"
            android:fontFamily="serif" android:typeface="normal" android:lineSpacingExtra="8sp"
            android:textAlignment="viewStart"/>
    <TextView
            android:text="@string/slack"
            android:layout_width="0dp"
            android:layout_height="38dp" android:id="@+id/slack_text"
            app:layout_constraintTop_toBottomOf="@+id/phone_number_text"
            app:layout_constraintEnd_toEndOf="@+id/profile_image"
            app:layout_constraintStart_toStartOf="@+id/profile_image" android:textSize="14sp"
            android:fontFamily="serif" android:typeface="normal" android:lineSpacingExtra="8sp"
            android:textAlignment="viewStart"/>
</android.support.constraint.ConstraintLayout>