<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity" android:id="@+id/button_profile" tools:layout_editor_absoluteY="56dp">
    <TextView
            android:text="@string/welcome_text"
            android:textColor="@android:color/black"
            android:layout_width="0dp"
            android:layout_height="50dp" android:id="@+id/text_welcome" android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toTopOf="@+id/button_about" android:layout_marginBottom="70dp"
            android:fontFamily="sans-serif" android:typeface="sans" android:textSize="30sp"
            android:lineSpacingExtra="12sp" android:textAlignment="center" android:textStyle="bold"/>
    <Button
            android:text="@string/about_button"
            android:background="@drawable/buttons_border"
            android:textColor="@android:color/black"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/button_about"
            app:layout_constraintTop_toBottomOf="@+id/text_welcome" app:layout_constraintEnd_toEndOf="@+id/text_welcome"
            app:layout_constraintStart_toStartOf="@+id/text_welcome"
            android:layout_marginTop="180dp" app:layout_constraintHorizontal_bias="1.0"
            android:width="400dp" android:padding="10dp" android:textAlignment="center" android:textSize="18sp"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp"/>
    <Button
            android:text="@string/profile_button"
            android:background="@drawable/buttons_border"
            android:textColor="@android:color/black"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/button_my_profile"
            app:layout_constraintTop_toBottomOf="@+id/button_about" app:layout_constraintEnd_toEndOf="@+id/button_about"
            app:layout_constraintStart_toStartOf="@+id/button_about"
            android:layout_marginTop="32dp" android:padding="10dp" android:textSize="18sp"/>
</android.support.constraint.ConstraintLayout>